# readahead

./: Makefile  README.md  readahead-1.5.6-off.patch  readahead.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  config.h.in  configure  configure.ac
src/config/: include-Makefile.am
src/lists/: Makefile.am  Makefile.in  default.early  default.later
src/po/: LINGUAS  Makevars  POTFILES.in  ar.gmo  ar.po  bg.gmo  bg.po  ca.gmo  ca.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  readahead.pot  sr.gmo  sr.po  sr@latin.gmo  sr@latin.po  ta.gmo  ta.po
src/scripts/: Makefile.am  Makefile.in
src/src/: Makefile.am  Makefile.in  nls.h  readahead-collector.c  readahead.c
